fix z-index confilict between snakbar messages and modal

--- a/public/src/App.css
+++ b/public/src/App.css
@@ -583,7 +583,7 @@ tr.eventhide {
   align-items: center;
   justify-content: center;
   transition: background 300ms ease-out;
-  z-index: 1999;
+  z-index: 1000;
 }
 
 .modal-overlay_after-open {
